--- a/templates/node--agent--slider.html.twig
+++ b/templates/node--agent--slider.html.twig
@@ -69,7 +69,7 @@
   'clearfix',
 ] %}
 {% set cardClasses = [
-  'node__content', 'clearfix', 'card', 'border-info', 'm-0'
+  'node__content', 'clearfix', 'card', 'border-info', 'm-0', 'p-2'
 ] %}
 {% set image_uri = attribute(content.field_agent_logo[0], '#markup') %}
 <article{{ attributes.addClass(classes) }}>
@@ -78,7 +78,7 @@
       <div class="col-9">
         <h6 class="m-0"><a href="{{ url }}" class="stretched-link">{{ label }}</a></h6>
         <div class="small text-center"><i class="fas fa-phone-alt"></i> {{ node.field_agent_phone.value }}</div>
-        <div class="text-nowrap overflow-hidden"><i class="fas fa-map-marker-alt"></i> {{ node.field_agent_district.value }}</div>
+        <div class="text-nowrap overflow-hidden"><i class="fas fa-map-marker-alt"></i> {{ node.field_agent_operations_area.value }}</div>
       </div>
       <div class="col-3">
         <img src="{{ image_uri }}" class="card-img-top" alt="employer photo">
