--- a/templates/node--agent--slider.html.twig
+++ b/templates/node--agent--slider.html.twig
@@ -77,7 +77,7 @@
     <div class="row">
       <div class="col-9">
         <h6 class="m-0"><a href="{{ url }}" class="stretched-link">{{ label }}</a></h6>
-        <div class="small text-center"><i class="fas fa-phone-alt"></i> {{ node.field_agent_phone.value }}</div>
+        <div class="small"><i class="fas fa-phone-alt"></i> {{ node.field_agent_phone.value }}</div>
         <div class="text-nowrap overflow-hidden"><i class="fas fa-map-marker-alt"></i> {{ node.field_agent_operations_area.value }}</div>
       </div>
       <div class="col-3">
