--- a/templates/node--agent--slider.html.twig
+++ b/templates/node--agent--slider.html.twig
@@ -69,12 +69,12 @@
   'clearfix',
 ] %}
 {% set cardClasses = [
-  'node__content', 'clearfix', 'card', 'border-info', 'm-0', 'p-2'
+  'node__content', 'clearfix', 'card', 'border-info', 'm-0', 'p-2', 'd-flex', 'justify-content-center'
 ] %}
 {% set image_uri = attribute(content.field_agent_logo[0], '#markup') %}
 <article{{ attributes.addClass(classes) }}>
   <div{{ content_attributes.addClass(cardClasses) }} style="height: 8em">
-    <div class="row">
+    <div class="row jus">
       <div class="col-8">
         <h6 class="m-0"><a href="{{ url }}" class="stretched-link">{{ label }}</a></h6>
         <div class="small"><i class="fas fa-phone-alt"></i> {{ node.field_agent_phone.value }}</div>
