--- a/templates/node--advert--teaser.html.twig
+++ b/templates/node--advert--teaser.html.twig
@@ -95,7 +95,7 @@
           <div class="advert-body flex-grow-1 d-flex flex-column justify-content-between">
             <div class="advert-body-main">
               <span><i class="fa fa-map-marker-alt"></i> {{ node.field_advert_locality_province.value }}, {{ node.field_advert_locality_district.value }}{% if node.field_advert_locality_sector is not empty %}, {{ node.field_advert_locality_sector.value }}{% endif %}</span>
-              <p class="mb-0 d-flex">
+              <p class="mb-0 d-flex flex-wrap">
                 <span class="pe-1" style="white-space: nowrap">Published on {{ date(publishedOn)|date('j F') }}</span>
                 <span class="pe-1" style="white-space: nowrap">| Expires on {{ date(expiresOn)|date('j F') }}</span>
                 {% if node.field_advert_is_agent.value %}
