--- a/templates/node--advert--teaser.html.twig
+++ b/templates/node--advert--teaser.html.twig
@@ -94,17 +94,19 @@
           </div>
           <div class="advert-body flex-grow-1 d-flex flex-column justify-content-between">
             <div class="advert-body-main">
-              <span><i class="fa fa-map-marker-alt"></i> {{ node.field_advert_locality_province.value }}, {{ node.field_advert_locality_district.value }}{% if node.field_advert_locality_sector is not empty %}, {{ node.field_advert_locality_sector.value }}{% endif %}</span>
+              <span>
+                <i class="fa fa-map-marker-alt"></i> {{ node.field_advert_locality_province.value }}, {{ node.field_advert_locality_district.value }}{% if node.field_advert_locality_sector is not empty %}, {{ node.field_advert_locality_sector.value }}{% endif %}
+              </span>
               <p class="mb-0 d-flex flex-wrap">
                 <span class="pe-1" style="white-space: nowrap">Published on {{ date(publishedOn)|date('j F') }}</span>
                 <span class="pe-1" style="white-space: nowrap">| Expires on {{ date(expiresOn)|date('j F') }}</span>
-                {% if node.field_advert_is_agent.value %}
-                  <span class="d-flex" style="white-space: nowrap">
-                    <span class="pe-1">| Published by</span>
-                    {{ drupal_link(content.agent_label, 'node/' ~ content.agent_id) }}
-                  </span>
-                {% endif %}
               </p>
+              {% if node.field_advert_is_agent.value %}
+                <span class="d-flex" style="white-space: nowrap">
+                  <span class="pe-1">By</span>
+                  {{ drupal_link(content.agent_label, 'node/' ~ content.agent_id) }}
+                </span>
+              {% endif %}
               <p class="mb-0">
                 <strong>Advert: </strong>{{ content.field_advert_type|field_value }},
                 <strong>Property: </strong>{{ content.field_advert_property_type|field_value }}
