--- a/templates/node--agent--slider.html.twig
+++ b/templates/node--agent--slider.html.twig
@@ -77,7 +77,7 @@
     <div class="row">
       <div class="col-8 d-flex flex-column align-items-start justify-content-center">
         <h6 class="m-0 float-start"><a href="{{ url }}" class="stretched-link">{{ label }}</a></h6>
-        <div class="mb-2">{{ node.field_advertiser_type|field_value }}</div>
+        <div class="mb-2">{{ content.field_advertiser_type|field_value }}</div>
         <div class="small d-inline-block"><i class="fas fa-phone-alt"></i> {{ node.field_agent_phone.value }}</div>
         <div class="text-nowrap overflow-hidden"><i class="fas fa-map-marker-alt"></i> {{ node.field_agent_operations_area.value }}</div>
       </div>
