--- a/emails/hir-campaign-adverts.html.twig
+++ b/emails/hir-campaign-adverts.html.twig
@@ -9,7 +9,7 @@
         <td class="tg-0pky" colspan="2">
           <a href="http://hircampaign.s3-website.eu-central-1.amazonaws.com" target="_blank">
             <img src="{{ image_url }}"
-                 class="templateImage" alt="email_banner">
+                 class="templateImage" alt="email_banner" style="max-width: 640px;">
           </a>
         </td>
       </tr>
