--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -67,7 +67,7 @@
  * @see html.html.twig
  */
 #}
-<div id="page-wrapper">
+<div id="page-wrapper" style="margin-top: 170px">
   <div id="page">
     <header id="header" class="header" role="banner" aria-label="{{ 'Site header'|t}}">
       {% block head %}
